k8s/db/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openedx-db
  labels:
    istio-injection: disabled
