k8s/db/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openedx-db-allow
  namespace: openedx-db
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openedx
      ports:
        - protocol: TCP
          port: 27017
        - protocol: TCP
          port: 9200
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openedx-db
      ports:
        - protocol: TCP
          port: 27017
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 9300
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openedx-db
      ports:
        - protocol: TCP
          port: 27017
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 9300
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
